# 2017-2-CECD-ButterflyEffect-2

./: .gitignore  LICENSE.txt  README.md  test_Client  test_Server
1203/Client/: CMakeCache.txt  Client.cpp  Makefile  Point.h  Worms.cpp  Worms.h  client  cmake_install.cmake
1203/Server/: CMakeCache.txt  Makefile  cmake_install.cmake
2dTut/: 2dTut.sln  2dTut.userprefs  Assembly-CSharp.csproj
2dTut/Assets/: Game.unity  Surface.physicMaterial
2dTut/Assets/Android_Func/: AndroidManager.cs  TestGUI.cs
2dTut/Assets/Snake/: Food.mat  Head.prefab  HeadController.cs  SpawnFood.cs  rotateFood.cs
2dTut/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Client/Client/Client/: client.cpp
Server/Server/Server/: server.cpp
UDP/: CMakeLists.txt  PracticalSocket.cpp  PracticalSocket.h  README.md  config.h
example1/example1/: main.cpp
latestCode/ButterflyEffect/: local.properties  settings.gradle
latestCode/ButterflyEffect/app/: build.gradle
latestCode/Client/: CMakeLists.txt  client  config.h
latestCode/Client/ButterflyEffect/: build.gradle  import-summary.txt
latestCode/FilterValidation/: README.md
latestCode/FilterValidation/app/: build.gradle
latestCode/Server/: CMakeCache.txt  CMakeLists.txt  Keydata.h  Makefile  PracticalSocket.cpp  Server.cpp  Util.h  cmake_install.cmake  keydata.h
latestCode/Server/json11/: json11.pc
latestCode/ServerForTest/: Makefile  Server.cpp  cmake_install.cmake  server
latestCode/TCPExample/Server/: TCPTest.cpp  stdafx.cpp
latestCode/TempFile/ServerForTest/: CMakeCache.txt  CMakeLists.txt  Server.cpp  server
latestCode/TempFile/TempClient_c++/: Client.cpp  Client_temp.cpp  Worms.cpp
latestCode/TempServer/: CMakeLists.txt  config.h
oldCode/sample/Client/: Client.cpp
oldCode/sample/DrawFunction/: .ImageMove.cpp.swp  Makefile
oldCode/v1.1/: CMakeCache.txt  Client.cpp  Server.cpp
oldCode/v1.2/: DrawObject.cpp  DrawObject_using_theta.cpp  ImageRotate  ImageRotate.cpp
sample/: DrawObject_using_theta.cpp
sample/Background_Transparency/: Makefile  Overlay  Overlay.cpp
sample/Client/: Client.cpp  cmake_install.cmake
sample/DrawFunction/: .ImageMove.cpp.swp  ImageMove.cpp
sample/DrawMovingCircle/: DrawObject_using_theta  Makefile
user_code/: CMakeLists.txt  Server.cpp
user_code _sendPos/: config.h  openpose.cpp
user_code_sendPos/: CMakeLists.txt  Client.cpp  Server.cpp
v1.1/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Makefile  Server.cpp  client  cmake_install.cmake  server
v1.2/: DrawObject_using_theta  Makefile  RanDegreeMove.cpp  getch.h
v1.3 client/: Client.cpp  Server.cpp
v1.3_client/: CMakeLists.txt  Client_temp.cpp  client
(+212 files in other folders)
